# gtts

./: .env.example  .gitignore  README.md  pyproject.toml
gtts/: __init__.py  cli.py  config.py  gdocs.py  tts.py
